// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackingHeader component re renders properly when rejected status 1`] = `
<div>
  <div
    class="
    position-fixed
    tracking-content-header"
  >
    <div
      class="row m-0 tracking-header"
    >
      <button
        class="tracking-cancel-btn"
        data-dismiss=""
        data-target=""
        data-testid="button"
        data-toggle=""
        id="BUSWRF0IH"
        type="button"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <defs>
            <path
              d="M0 1.5L1.5 0 8 6.5 14.5 0 16 1.5 9.5 8l6.5 6.5-1.5 1.5L8 9.5 1.5 16 0 14.5 6.5 8z"
              id="icon-close_svg__a"
            />
          </defs>
          <use
            transform="translate(4 4)"
            xlink:href="#icon-close_svg__a"
          />
        </svg>
      </button>
      <h5>
        Logistics details
      </h5>
    </div>
    <hr
      class="text-muted m-0 border-box col-12"
    />
  </div>
</div>
`;

exports[`TrackingHeader component renders properly 1`] = `
<div>
  <div
    class="
    position-relative
    tracking-content-header"
  >
    <div
      class="row m-0 tracking-header"
    >
      <button
        class="tracking-cancel-btn"
        data-dismiss=""
        data-target=""
        data-testid="button"
        data-toggle=""
        id="BUSWRF0IH"
        type="button"
      >
        <svg
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <defs>
            <path
              d="M0 1.5L1.5 0 8 6.5 14.5 0 16 1.5 9.5 8l6.5 6.5-1.5 1.5L8 9.5 1.5 16 0 14.5 6.5 8z"
              id="icon-close_svg__a"
            />
          </defs>
          <use
            transform="translate(4 4)"
            xlink:href="#icon-close_svg__a"
          />
        </svg>
      </button>
      <h5>
        Logistics details
      </h5>
    </div>
    <hr
      class="text-muted m-0 border-box col-12"
    />
  </div>
</div>
`;
